--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
   <!-- Your custom CSS (if any) -->
   <style>
     /* Your custom styles here */
+    body {
+      font-family: 'Helvetica Neue', sans-serif;
+    }
   </style>
 </head>
 
 <body>
   <!-- Header Section -->
-  <header class="bg-indigo-900 text-white py-6">
+  <header class="bg-gray-800 text-white py-6">
     <div class="container mx-auto px-4">
       <div class="flex justify-between items-center">
         <img class="h-8" src="your_logo.png" alt="Your Startup Logo">
@@ -26,12 +29,12 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="bg-indigo-800 py-16">
+  <section class="bg-gray-100 py-16">
     <div class="container mx-auto px-4">
       <div class="flex flex-col lg:flex-row items-center justify-between">
         <div class="lg:w-1/2 mb-8 lg:mb-0">
-          <h2 class="text-4xl font-bold text-white mb-4">Transforming Brands with Next-Gen AI Marketing Solutions</h2>
-          <p class="text-white text-lg">At Your Startup Name, we are pioneers in cutting-edge AI-driven marketing strategies.
+          <h2 class="text-4xl font-bold text-gray-800 mb-4">Transforming Brands with Next-Gen AI Marketing Solutions</h2>
+          <p class="text-gray-600 text-lg">At Your Startup Name, we are pioneers in cutting-edge AI-driven marketing strategies.
             Our mission is to revolutionize the marketing landscape by harnessing the true potential of artificial intelligence.</p>
         </div>
         <div class="lg:w-1/2">
@@ -42,68 +45,68 @@
   </section>
 
   <!-- Services Section -->
-  <section class="bg-pink-400 py-16">
+  <section class="bg-white py-16">
     <div class="container mx-auto px-4">
-      <h2 class="text-3xl font-bold mb-8 text-white">Why Choose Us?</h2>
+      <h2 class="text-3xl font-bold mb-8 text-gray-800">Why Choose Us?</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         <!-- Service Item 1 -->
-        <div class="p-4 bg-white rounded-lg shadow-md">
-          <h3 class="text-xl font-semibold mb-2">Unmatched Expertise</h3>
-          <p>We have a team of AI experts and marketing geniuses dedicated to propelling your brand forward.</p>
+        <div class="p-4 bg-gray-100 rounded-lg shadow-md">
+          <h3 class="text-xl font-semibold mb-2 text-gray-800">Unmatched Expertise</h3>
+          <p class="text-gray-600">We have a team of AI experts and marketing geniuses dedicated to propelling your brand forward.</p>
         </div>
         <!-- Service Item 2 -->
-        <div class="p-4 bg-white rounded-lg shadow-md">
-          <h3 class="text-xl font-semibold mb-2">Data-Driven Insights</h3>
-          <p>We analyze vast datasets to extract invaluable consumer insights, ensuring your campaigns are always one step
+        <div class="p-4 bg-gray-100 rounded-lg shadow-md">
+          <h3 class="text-xl font-semibold mb-2 text-gray-800">Data-Driven Insights</h3>
+          <p class="text-gray-600">We analyze vast datasets to extract invaluable consumer insights, ensuring your campaigns are always one step
             ahead.</p>
         </div>
         <!-- Service Item 3 -->
-        <div class="p-4 bg-white rounded-lg shadow-md">
-          <h3 class="text-xl font-semibold mb-2">Hyper-Personalization</h3>
-          <p>Witness the magic of AI as we personalize every customer interaction, creating lasting connections.</p>
+        <div class="p-4 bg-gray-100 rounded-lg shadow-md">
+          <h3 class="text-xl font-semibold mb-2 text-gray-800">Hyper-Personalization</h3>
+          <p class="text-gray-600">Witness the magic of AI as we personalize every customer interaction, creating lasting connections.</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Call-to-Action Section -->
-  <section class="bg-yellow-400 py-16">
+  <section class="bg-blue-600 py-16">
     <div class="container mx-auto px-4 text-center">
       <h2 class="text-4xl font-bold text-white mb-4">Get Ready for Results Like Never Before</h2>
-      <p class="text-white text-lg mb-8">Contact us now to witness the future of marketing with our AI-powered solutions.</p>
-      <a href="#contact" class="bg-white text-yellow-400 py-4 px-8 rounded-full text-lg font-semibold hover:bg-yellow-300">Contact Us Now</a>
+      <p class="text-gray-200 text-lg mb-8">Contact us now to witness the future of marketing with our AI-powered solutions.</p>
+      <a href="#contact" class="bg-white text-blue-600 py-4 px-8 rounded-full text-lg font-semibold hover:bg-blue-100">Contact Us Now</a>
     </div>
   </section>
 
   <!-- Success Stories Section -->
-  <section class="bg-purple-800 py-16">
+  <section class="bg-gray-800 py-16">
     <div class="container mx-auto px-4">
       <h2 class="text-3xl font-bold mb-8 text-white">Success Stories</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         <!-- Testimonial Item 1 -->
         <div class="p-4 bg-white rounded-lg shadow-md">
-          <blockquote class="italic text-lg">"Your Startup Name has truly transformed our marketing efforts. With their
+          <blockquote class="italic text-lg text-gray-800">"Your Startup Name has truly transformed our marketing efforts. With their
             AI-driven strategies, our conversion rates have skyrocketed!"</blockquote>
-          <p class="font-semibold">- Happy Client 1</p>
+          <p class="font-semibold text-gray-800">- Happy Client 1</p>
         </div>
         <!-- Testimonial Item 2 -->
         <div class="p-4 bg-white rounded-lg shadow-md">
-          <blockquote class="italic text-lg">"We were blown away by the personalized approach taken by Your Startup Name.
+          <blockquote class="italic text-lg text-gray-800">"We were blown away by the personalized approach taken by Your Startup Name.
             Our customers now feel valued and engaged!"</blockquote>
-          <p class="font-semibold">- Happy Client 2</p>
+          <p class="font-semibold text-gray-800">- Happy Client 2</p>
         </div>
         <!-- Testimonial Item 3 -->
         <div class="p-4 bg-white rounded-lg shadow-md">
-          <blockquote class="italic text-lg">"The data insights provided by Your Startup Name have been game-changers for
+          <blockquote class="italic text-lg text-gray-800">"The data insights provided by Your Startup Name have been game-changers for
             our marketing campaigns. Highly recommended!"</blockquote>
-          <p class="font-semibold">- Happy Client 3</p>
+          <p class="font-semibold text-gray-800">- Happy Client 3</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="bg-blue-900 text-white py-16">
+  <section id="contact" class="bg-gray-900 text-white py-16">
     <div class="container mx-auto px-4">
       <div class="text-center mb-8">
         <h2 class="text-4xl font-bold mb-4">Get in Touch</h2>
@@ -127,7 +130,7 @@
           </div>
           <div>
             <button type="submit"
-              class="w-full bg-white text-blue-800 py-4 px-8 rounded-full text-lg font-semibold hover:bg-blue-100">Submit</button>
+              class="w-full bg-white text-blue-600 py-4 px-8 rounded-full text-lg font-semibold hover:bg-blue-100">Submit</button>
           </div>
         </form>
       </div>
@@ -135,7 +138,7 @@
   </section>
 
   <!-- Footer Section -->
-  <footer class="bg-indigo-900 py-6 text-white text-center">
+  <footer class="bg-gray-800 py-6 text-white text-center">
     <div class="container mx-auto px-4">
       <p class="text-lg">Stay Connected:</p>
       <!-- Social Media Icons/Links -->
