Change font to Montserrat

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <title>Your Startup Name - AI Marketing Agency</title>
   <!-- Include Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css" rel="stylesheet">
+  <!-- Include Montserrat font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- Your custom CSS (if any) -->
   <style>
     /* Your custom styles here */
     body {
-      font-family: 'Helvetica Neue', sans-serif;
+      font-family: 'Montserrat', sans-serif;
     }
   </style>
 </head>
