--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
             font-family: 'Poppins', sans-serif;
         }
     </style>
+    <!-- Primary Meta Tags -->
+    <title>Clicksential — The AI Marketing Agency</title>
+    <meta name="title" content="Clicksential — The AI Marketing Agency" />
+    <meta name="description" content="Unleash the Power of AI for Unprecedented Conversions!" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://clicksential.com" />
+    <meta property="og:title" content="Clicksential — The AI Marketing Agency" />
+    <meta property="og:description" content="Unleash the Power of AI for Unprecedented Conversions!" />
+    <meta property="og:image" content="https://clicksential.com/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://clicksential.com" />
+    <meta property="twitter:title" content="Clicksential — The AI Marketing Agency" />
+    <meta property="twitter:description" content="Unleash the Power of AI for Unprecedented Conversions!" />
+    <meta property="twitter:image" content="https://clicksential.com/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
