--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header class="bg-gray-800 text-white py-6">
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center">
-                <img class="h-14" src="logo.svg" alt="Clicksential Logo">
+                <img class="h-16" src="logo.svg" alt="Clicksential Logo">
                 <h1 class="text-md">Unleash the Power of AI for Unprecedented Conversions!</h1>
             </div>
         </div>
@@ -55,10 +55,7 @@
                 <div class="lg:w-1/2 mb-8 lg:mb-0 mr-10">
                     <h2 class="text-3xl font-bold text-gray-800 mb-4">Transforming Brands with Next-Gen AI Marketing
                         Solutions</h2>
-                    <p class="text-gray-600 text-lg  mr-10">At Your Startup Name, we are pioneers in cutting-edge
-                        AI-driven marketing strategies.
-                        Our mission is to revolutionize the marketing landscape by harnessing the true potential of
-                        artificial intelligence.</p>
+                    <p class="text-gray-600 text-lg  mr-10">Welcome to Clicksential, where innovation meets marketing excellence. As AI pioneers, we revolutionize the marketing landscape with boundless artificial intelligence. Join us on this awe-inspiring journey to unparalleled success. </p>
                 </div>
                 <div class="lg:w-1/2">
                     <img src="waterfall.jpeg" alt="AI and Marketing synergy" class="w-full h-auto">
