Change default name

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <!-- Testimonial Item 1 -->
                 <div class="p-4 bg-white rounded-lg shadow-md">
-                    <blockquote class="italic text-md text-gray-800">"Your Startup Name has truly transformed our
+                    <blockquote class="italic text-md text-gray-800">"Clicksential has truly transformed our
                         marketing efforts. With their
                         AI-driven strategies, our conversion rates have skyrocketed!"</blockquote>
                     <br />
@@ -120,14 +120,14 @@
                 <!-- Testimonial Item 2 -->
                 <div class="p-4 bg-white rounded-lg shadow-md">
                     <blockquote class="italic text-md text-gray-800">"We were blown away by the personalized approach
-                        taken by Your Startup Name.
+                        taken by Clicksential.
                         Our customers now feel valued and engaged!"</blockquote>
                     <br />
                     <p class="font-semibold text-gray-800">- Happy Client 2</p>
                 </div>
                 <!-- Testimonial Item 3 -->
                 <div class="p-4 bg-white rounded-lg shadow-md">
-                    <blockquote class="italic text-md text-gray-800">"The data insights provided by Your Startup Name
+                    <blockquote class="italic text-md text-gray-800">"The data insights provided by Clicksential
                         have been game-changers for
                         our marketing campaigns. Highly recommended!"</blockquote>
                     <br />
