--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
 <body>
     <!-- Header Section -->
     <header class="bg-gray-800 text-white py-6">
-        <div class="container mx-auto px-4">
-            <div class="flex justify-between items-center">
-                <img class="h-16" src="logo.svg" alt="Clicksential Logo">
-                <h1 class="text-md">Unleash the Power of AI for Unprecedented Conversions!</h1>
-            </div>
+        <div class="container mx-auto px-4 flex flex-col items-center md:flex-row md:justify-between">
+            <img class="h-16 mb-4 md:mb-0" src="logo.svg" alt="Clicksential Logo">
+            <h1 class="text-md text-center md:text-left">Unleash the Power of AI for Unprecedented Conversions!</h1>
         </div>
     </header>
+    
 
     <!-- Hero Section -->
     <section class="bg-gray-100 py-16">
