--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Include Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/jpg" href="clicksential.ico"/>
     <!-- Your custom CSS (if any) -->
     <style>
         /* Your custom styles here */
