--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="lg:w-1/2 mb-8 lg:mb-0 mr-10">
                     <h2 class="text-3xl font-bold text-gray-800 mb-4">Transforming Brands with Next-Gen AI Marketing
                         Solutions</h2>
-                    <p class="text-gray-600 text-lg  mr-10">Welcome to Clicksential, where innovation meets marketing excellence. As AI pioneers, we revolutionize the marketing landscape with boundless artificial intelligence. Join us on this awe-inspiring journey to unparalleled success. </p>
+                    <p class="text-gray-600 text-lg  mr-10">Welcome to Clicksential, a convergence of innovation and marketing excellence. Through advanced artificial intelligence, we reshape the marketing landscape, propelling businesses to unparalleled success. Embark on this awe-inspiring journey with us and unleash your brand's true potential. </p>
                 </div>
                 <div class="lg:w-1/2">
                     <img src="waterfall.jpeg" alt="AI and Marketing synergy" class="w-full h-auto">
