--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                         Solutions</h2>
                     <p class="text-gray-600 text-lg  lg:mr-10">Welcome to Clicksential, a convergence of innovation and marketing excellence. Through advanced artificial intelligence, we reshape the marketing landscape, propelling businesses to unparalleled success. Embark on this awe-inspiring journey with us and unleash your brand's true potential. </p>
                 </div>
-                <div class="lg:w-1/2">
-                    <img src="waterfall.jpeg" alt="AI and Marketing synergy" class="w-full h-auto">
+                <div class="lg:w-1/2 ">
+                    <img src="waterfall-guy.jpeg" alt="AI and Marketing synergy" class="h-auto  rounded-lg shadow-black shadow-2xl shadow-black/5  ">
                 </div>
             </div>
         </div>
