--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     <!-- Header Section -->
     <header class="bg-gray-800 text-white py-6">
         <div class="container mx-auto px-4 flex flex-col items-center md:flex-row md:justify-between">
-            <img class="h-16 mb-4 md:mb-0" src="logo.svg" alt="Clicksential Logo">
+            <a href="/">
+                <img class="h-16 mb-4 md:mb-0" src="logo.svg" alt="Clicksential Logo">
+            </a>
+            
             <h1 class="text-md text-center md:text-left">Unleash the Power of AI for Unprecedented Conversions!</h1>
         </div>
     </header>
