Adjust size of logo for mobile

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header class="bg-gray-800 text-white py-6">
         <div class="container mx-auto px-4 flex flex-col items-center md:flex-row md:justify-between">
             <a href="/">
-                <img class="h-16 mb-4 md:mb-0" src="logo.svg" alt="Clicksential Logo">
+                <img class="h-22 md:h-16 mb-0" src="logo.svg" alt="Clicksential Logo">
             </a>
             
             <h1 class="text-md text-center md:text-left">Unleash the Power of AI for Unprecedented Conversions!</h1>
