Remove few more AI

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clicksential - The AI Marketing Agency</title>
+    <title>Clicksential - The Intelligent Marketing Agency</title>
     <!-- Include Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -95,8 +95,7 @@
     <section class="bg-indigo-900 py-16">
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-4xl font-bold text-white mb-4">Get Ready for Results Like Never Before</h2>
-            <p class="text-gray-200 text-lg mb-8">Contact us now to witness the future of marketing with our AI-powered
-                solutions.</p>
+            <p class="text-gray-200 text-lg mb-8">Contact us now to witness the future of marketing with our cutting-edge solutions.</p>
             <a href="#contact"
                 class="bg-white text-indigo-900 py-4 px-8 rounded-full text-lg font-semibold hover:bg-blue-100">Contact
                 Us Now</a>
@@ -110,9 +109,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <!-- Testimonial Item 1 -->
                 <div class="p-4 bg-white rounded-lg shadow-md">
-                    <blockquote class="italic text-md text-gray-800">"Clicksential has truly transformed our
-                        marketing efforts. With their
-                        AI-driven strategies, our conversion rates have skyrocketed!"</blockquote>
+                    <blockquote class="italic text-md text-gray-800">"Clicksential has revolutionized our marketing efforts. Their innovative strategies have propelled our conversion rates to new heights!"</blockquote>
                     <br />
                     <p class="font-semibold text-gray-800">- Happy Client 1</p>
                 </div>
