--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <!-- Footer Section -->
     <footer class="bg-gray-800 py-6 text-white text-center">
         <div class="container mx-auto px-4">
-            <p class="text-sm" id="footer-year">© <span id="current-year"></span> Clicksential Digital PLT</p>
+            <p class="text-sm" id="footer-year">© <span id="current-year"></span> Clicksential Digital PLT (LLP0035920-LGN)</p>
             <!-- Social Media Icons/Links -->
         </div>
     </footer>
