Update customer names

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         efforts. Their innovative strategies have propelled our conversion rates to new heights!"
                     </blockquote>
                     <br />
-                    <p class="font-semibold text-gray-800">- Happy Client 1</p>
+                    <p class="font-semibold text-gray-800">- Yen, Age D'Fine</p>
                 </div>
                 <!-- Testimonial Item 2 -->
                 <div class="p-4 bg-white rounded-lg shadow-md">
@@ -133,7 +133,7 @@
                         taken by Clicksential.
                         Our customers now feel valued and engaged!"</blockquote>
                     <br />
-                    <p class="font-semibold text-gray-800">- Happy Client 2</p>
+                    <p class="font-semibold text-gray-800">- Jordan, Jojosh Enterprise</p>
                 </div>
                 <!-- Testimonial Item 3 -->
                 <div class="p-4 bg-white rounded-lg shadow-md">
@@ -141,7 +141,7 @@
                         have been game-changers for
                         our marketing campaigns. Highly recommended!"</blockquote>
                     <br />
-                    <p class="font-semibold text-gray-800">- Happy Client 3</p>
+                    <p class="font-semibold text-gray-800">- Alan, Digital8Tracktion</p>
                 </div>
             </div>
         </div>
