--- a/seller-tool/index.html
+++ b/seller-tool/index.html
@@ -3,19 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seller Tool Automation</title>
+    <title>Seller Tool Authentication</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 p-4">
     <div class="max-w-md mx-auto bg-white p-6 rounded shadow-lg">
-        <h1 class="text-2xl font-semibold mb-4">Seller Tool Automation</h1>
+        <h1 class="text-2xl font-semibold mb-4">Seller Tool Authentication</h1>
         <div class="mb-4">
             <input id="shopeeUsername" type="text" placeholder="Shopee Username" class="w-full p-2 border rounded">
         </div>
-        <button id="syncButton" class="w-full bg-blue-500 text-white p-2 rounded hover:bg-blue-600">Sync Shopee Account</button>
+        <div class="mb-4">
+            <input id="shopeePassword" type="password" placeholder="Shopee Password" class="w-full p-2 border rounded">
+        </div>
+        <button id="loginButton" class="w-full bg-blue-500 text-white p-2 rounded hover:bg-blue-600">Login</button>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        document.getElementById('loginButton').addEventListener('click', function () {
+            const username = document.getElementById('shopeeUsername').value;
+            const password = document.getElementById('shopeePassword').value;
+
+            // Check if the entered username and password are correct
+            if (username === 'shopee-admin' && password === 'shopee-password') {
+                // If correct, redirect to the second page (products.html)
+                window.location.href = 'seller-tool/products.html';
+            } else {
+                // If incorrect, show an error message
+                alert('Invalid username or password. Please try again.');
+            }
+        });
+    </script>
 </body>
 </html>
-z
