Fix broken link

--- a/seller-tool/index.html
+++ b/seller-tool/index.html
@@ -26,7 +26,7 @@
             // Check if the entered username and password are correct
             if (username === 'shopee-admin' && password === 'shopee-password') {
                 // If correct, redirect to the second page (products.html)
-                window.location.href = 'seller-tool/products.html';
+                window.location.href = 'products.html';
             } else {
                 // If incorrect, show an error message
                 alert('Invalid username or password. Please try again.');
