Add static product list

--- a/seller-tool/products.html
+++ b/seller-tool/products.html
@@ -12,7 +12,28 @@
         <p>Please check 5 products to enable autoboost. Autoboost function will boost the visibility of your products in Shopee's Search and Promotion algorithm. The autoboost will be enabled only for 4 hours.</p>
         
         <div id="productList" class="mt-4 space-y-2">
-            <!-- Product items will be generated here -->
+            <!-- Static Product List -->
+            <div class="flex items-center justify-between border-b py-2">
+                <span>Product 1 (Stock: 10)</span>
+                <input type="checkbox">
+            </div>
+            <div class="flex items-center justify-between border-b py-2">
+                <span>Product 2 (Stock: 15)</span>
+                <input type="checkbox">
+            </div>
+            <div class="flex items-center justify-between border-b py-2">
+                <span>Product 3 (Stock: 8)</span>
+                <input type="checkbox">
+            </div>
+            <div class="flex items-center justify-between border-b py-2">
+                <span>Product 4 (Stock: 12)</span>
+                <input type="checkbox">
+            </div>
+            <div class="flex items-center justify-between border-b py-2">
+                <span>Product 5 (Stock: 5)</span>
+                <input type="checkbox">
+            </div>
+            <!-- Add more products as needed -->
         </div>
 
         <div id="selectedProducts" class="mt-4">
